--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <textarea class="txtarea" id="textInput" placeholder="Type your text here..."></textarea>
     </div>
     <p class="count">Word Count: <span id="wordCount">0</span></p>
+    <p class="count">Letter Count: <span id="wordCount">0</span></p>
   </div>
 
   <script src="script.js"></script>
