--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Word Counter Test</title>
-<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Word Counter</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="container">
     <h1 class="headertxt">Word Counter</h1>
     <div class="txtarea-container">
-        <textarea class="txtarea" id="textInput" placeholder="Type your text here..."></textarea>
+      <textarea class="txtarea" id="textInput" placeholder="Type your text here..."></textarea>
+      <div class="counts-container">
+        <p class="count">Word Count: <span id="wordCount">0</span></p>
+        <p class="count">Letter Count: <span id="letterCount">0</span></p>
+      </div>
     </div>
-    <p class="count">Word Count: <span id="wordCount">0</span></p>
-    <p class="count">Letter Count: <span id="wordCount">0</span></p>
   </div>
-
   <script src="script.js"></script>
 </body>
 </html>
